
$Id$

2004-11-29 Karl Lehenbauer <karl-pg@sc.com>
    * Add library of useful PostreSQL helper functions to the playpen.

    * Add dbobjects PostgreSQL/Itcl-object interface package to the playpen.

2004-11-23 Karl Lehenbauer <karl-pg@sc.com>
    * Simplify result object processing

    * Fixed bug in Pg_cancelrequest where the error message would
      not be returned.

    * Remove unused variables.

    * Silence compiler warnings about a fall-through (that couldn't
      be reached) that would cause a function declared to return something
      to not return anything and about a possibly uninitialized variable.

2004-11-22 Karl Lehenbauer <karl-pg@sc.com>
    * Created playpen directory where interesting things that are not
      yet ready for prime time can be examined and messed with.  
      Added code for turning OIDs returned by pg_result -lAttributes
      into data type names.

2004-11-19 Karl Lehenbauer <karl-pg@sc.com>
    * Updated autoconf build to TEA 3.1 / autoconf 2.59

    * Added import_sampledata_prepared_onetransaction.tcl to the tests

2004-11-17 Karl Lehenbauer <karl-pg@sc.com>
    * minor optimization in connections-as-commands and results-as-commands
      where we don't copy and then swap, we copy it the way we want it to
      end up (first and second elements of objv reversed).

    * connections-as-commands and results-as-commands now error out when 
      called with no arguments

2004-11-16 Karl Lehenbauer <karl-pg@sc.com>
    * libpgtcl will again build with versions of Tcl < 8.5 thanks to a little
      extra checking for HAVETCL_NEWDICTOBJ

    * Fixed several calls to Tcl_AppendStringsToObj whose arguments were 
      terminated with -1 instead of NULL, eliminating several segmentation
      violations that could occur while preparing error messages.

    * Removed spurious newline at the start of the error message when
      the query result handle passed to pg_result is invalid.
