@@ -9,7 +9,11 @@
 
 source gen_db_objects.tcl
 
+if 0 {
 set baseClass [gen_table_base_class pg_type]
+} else {
+set baseClass [gen_table_base_class pp_users]
+}
 puts $baseClass
 eval $baseClass
 
@@ -17,7 +21,12 @@ package require sc-sqlobj
 
 ::sqlobj::SQLtable MySqlTable
 
+if 0 {
+
 MySqlTable instantiate -selectStatement "select * from pg_type" -dataKeyFields typname -objectType DB-pg_type
+
+puts [::itcl::find objects -class DB-pg_type]
+}
 
 if 0 {
 foreach obj [::itcl::find objects -class DB-pg_type] {
@@ -25,6 +34,9 @@ foreach obj [::itcl::find objects -class DB-pg_type] {
     puts [$obj configure]
     puts ""
 }
+
 }
 
+MySqlTable instantiate -selectStatement "select * from pp_users" -dataKeyFields "address neighborhood" -objectType DB-pp_users -namespace ::
 
+puts [::itcl::find objects -class DB-pp_users]
