@@ -2,9 +2,11 @@
 $Id$
 
 2004-11-29 Karl Lehenbauer <karl-pg@sc.com>
-    * Add library of useful PostreSQL helper functions to the playpen.
+    * Added library of useful PostreSQL helper functions to the playpen.
 
-    * Add dbobjects PostgreSQL/Itcl-object interface package to the playpen.
+    * Added dbobjects PostgreSQL/Itcl-object interface package to the playpen.
+
+    * Added pggrok code to introspect into Postgres databases to the playpen.
 
 2004-11-23 Karl Lehenbauer <karl-pg@sc.com>
     * Simplify result object processing
